# SANS-pilot

./: .dockerignore  Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml
.github/workflows/: build-prod-image.yml  ruff.yml  test.yml
src/sans_pilot/: __init__.py  analysis_loader.py  auth.py  files.py  main.py
src/sans_pilot/analyses/: __init__.py  fitting-with-custom-model.py
src/sans_pilot/templates/: __init__.py  fitting-with-cylinder-model.py
test/: test_endpoints.sh
