[project]
name = "sans-pilot"
version = "0.1.0"
description = "MCP server for SANS data analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"fastmcp>=3.0.0b1",
    "sans-fitter>=0.0.3",
    "kaleido>=1.2.0",
]

[project.optional-dependencies]
dev = [
	"ruff>=0.14.10",
]

[project.scripts]
sans-pilot = "sans_pilot.main:main"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]
indent-width = 2

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "I",
    "UP"
]
ignore = [
	"E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"